[package]
name = "inscenerator-entity"
version = "0.1.0"
authors = ["Michael Anderson <drmikeando@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xfs = { path = "../xfs" }
anyhow = "1.0.38"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5", features = ["preserve_order"] }
regex = "1"

[dev-dependencies]
# pretty_assertions = "0.6.1"
# similar = "0.5.0"
# test_utils = { path = "../test_utils" }
