[package]
name = "inscenerator-entity"
version = "0.1.0"
authors = ["Michael Anderson <drmikeando@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Filesystem based hierarchical text/data format"
homepage = "https://github.com/mikeando/inscenerator-entity"
repository = "https://github.com/mikeando/inscenerator-entity"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inscenerator-xfs = { version = "0.1.1", path = "../inscenerator-xfs" }
anyhow = "1.0.38"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5", features = ["preserve_order"] }
regex = "1"

[dev-dependencies]
# pretty_assertions = "0.6.1"
# similar = "0.5.0"
# test_utils = { path = "../test_utils" }
